gateway/kubernetes/gateway-service-template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: gateway
    application: gateway
    version: v1
    app.kubernetes.io/part-of: "example-app"
  name: gateway
spec:
  selector:
    matchLabels:
      application: gateway
      deployment: gateway
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gateway
        application: gateway
        deployment: gateway
        version: v1
        app.kubernetes.io/part-of: "example-app"

      # Enable Red Hat Service Mesh's automatic istio sidecar injection
      annotations:
        sidecar.istio.io/inject: "true"

      name: gateway
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace

        # Use OpenTracing enabled image
        image: docker.io/rhtgptetraining/foundation-gateway-service:1.0.2
        ports:
        - containerPort: 8080

        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: gateway
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 250m
            memory: 500Mi
          requests:
            cpu: 125m
            memory: 500Mi
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
